--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   "author": "Stephen Wan <stephen@stephenwan.net>",
   "license": "MIT",
   "devDependencies": {
-    "mocha": "^1.18.2",
+    "mocha": "~1.18.2",
     "istanbul": "^0.2.7",
     "jshint": "^2.5.0"
   },
